# phish-detective

./: .gitattributes  .gitignore  .vercelignore  pyproject.toml  requirements.txt  site_package.py
app/: __init__.py
app/Data/: whitelist.csv
app/api/v1/: routes.py  schemas.py
app/core/: model.py
app/features/: feature_extraction.py  fextract.py  optimize_feature_extract.py
app/models/: catboost_terbaru.pkl
app/services/: detection_service.py  send_notify_service.py
app/utils/: __init__.py  convert_feature_urtil.py  convert_keys_util.py  url_utils.py  whitelist_checker.py
